// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieList renders the component 1`] = `
<div
  className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 p-4"
>
  <a
    className="relative bg-white rounded-md shadow-lg overflow-hidden h-80 hover:cursor-pointer"
    href="/movie/1"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="w-full h-full bg-gray-800 flex items-center justify-center"
    >
      <p
        className="text-white"
      >
        Image not found
      </p>
    </div>
    <div
      className="absolute bottom-0 left-0 right-0 p-4 bg-gradient-to-t from-black to-transparent"
    >
      <h3
        className="text-lg font-semibold text-white"
      >
        Movie 1
      </h3>
    </div>
    <div
      className="absolute top-4 left-4 bg-white text-black rounded-full flex items-center justify-center w-10 h-10"
    >
      <p
        className="text-sm font-bold"
      />
    </div>
  </a>
  <a
    className="relative bg-white rounded-md shadow-lg overflow-hidden h-80 hover:cursor-pointer"
    href="/movie/2"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="w-full h-full bg-gray-800 flex items-center justify-center"
    >
      <p
        className="text-white"
      >
        Image not found
      </p>
    </div>
    <div
      className="absolute bottom-0 left-0 right-0 p-4 bg-gradient-to-t from-black to-transparent"
    >
      <h3
        className="text-lg font-semibold text-white"
      >
        Movie 2
      </h3>
    </div>
    <div
      className="absolute top-4 left-4 bg-white text-black rounded-full flex items-center justify-center w-10 h-10"
    >
      <p
        className="text-sm font-bold"
      />
    </div>
  </a>
</div>
`;

exports[`MovieList renders with error 1`] = `
<h1
  className="text-4xl font-bold text-center"
>
  error
</h1>
`;

exports[`MovieList renders with no movies 1`] = `
<h1
  className="text-4xl font-bold text-center"
>
  No movies found!
</h1>
`;
